--- a/Pages/AboutMe.cshtml
+++ b/Pages/AboutMe.cshtml
@@ -6,46 +6,143 @@
 
 <style>.footer {position: relative;}</style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
 
-<h1 class="heading1">Welcome!</h1>
-<p>I just wanted a website where I can store things I like, as well as  being able to say "yes I built a website and yes you can visit it right now"</p>
-
-<!-- Maybe insert the BigSmug emote here hehehehe -->
-<!-- Or maybe a picture of myself since that would fit the theme -->
-
-<h2 class="heading2">Who am I?</h2>
-<p>My name is Callum Wellard. I was born on the 9th of September, 1998. That would make me @ViewData["CallumDOB"].</p>
-
-<p>
-    I'm going to include a bunch of stuff here such as my CV as well as any pictures of myself.
-    I'm not expecting to keep this website up to date but if I do then that would be pretty damn cool I can't deny.
-</p>
-
-<a class="nav-link text-dark" asp-area="" asp-page="/Pictures">Want to see pictures of cute me? Here ya go!</a>
-
-<h2 class="heading2">Personal achievements</h2>
-<p>
-    Used to be a pretty good <a href="https://osu.ppy.sh/">Osu!</a> player back in the day, I believe I was around rank 40,000 in the world when I used to play religiously.
-    Unfortunately I can't find my ranking, nor a screenshot that proves this so you will just have to take my word on it.
-</p>
-<p>
-    I used to be a community Moderator for the game
-    <a href="https://store.steampowered.com/app/544920/Darwin_Project/">Darwin Project</a>
-    back when that game was still active, unfortunately it's no longer in development and I no longer play it.
-</p>
-<p>
-    I used to be a platinum 1 player on
-    <a href="https://store.steampowered.com/app/359550/Tom_Clancys_Rainbow_Six_Siege/">Rainbow Six Siege</a>
-    back when I played that religiously as well, not only that but I did it being a solo player. I don't play it anymore but oh my god is that an achievement, huh?
-</p>
-
-<h2 class="heading2">Socials</h2>
-<p>If you ever want to contact me then my socials are as followed:</p>
-
-  <h1 class="visually-hidden">Heroes examples</h1>
+<!-- What is up with this guy? -->
+  <div class="px-4 py-5 my-5 text-center">
+    <svg xmlns="http://www.w3.org/2000/svg" width="64" height="64" fill="currentColor" class="bi bi-heart" viewBox="0 0 16 16">
+        <path d="m8 2.748-.717-.737C5.6.281 2.514.878 1.4 3.053c-.523 1.023-.641 2.5.314 4.385.92 1.815 2.834 3.989 6.286 6.357 3.452-2.368 5.365-4.542 6.286-6.357.955-1.886.838-3.362.314-4.385C13.486.878 10.4.28 8.717 2.01L8 2.748zM8 15C-7.333 4.868 3.279-3.04 7.824 1.143c.06.055.119.112.176.171a3.12 3.12 0 0 1 .176-.17C12.72-3.042 23.333 4.867 8 15z"/>
+    </svg>
+    <h1 class="display-5 fw-bold">so what is up with this guy?</h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="lead mb-4">My name is Callum. I was born on the 9th of September, 1998. That would make me @ViewData["CallumDOB"].</p>
+    </div>
+  </div>
 
 
+  <!-- What am I about? -->
+<div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+      <div class="col-10 col-sm-8 col-lg-6">
+        <img src="~/images/Flower500.png" class="d-block mx-lg-auto img-fluid rounded" alt="Bootstrap Themes" loading="lazy" width="500" height="500">
+      </div>
+      <div class="col-lg-6">
+        <h1 class="display-5 fw-bold lh-1 mb-3">what am I about</h1>
+        <p class="lead">
+            So how would I describe myself? Well I think the best way to describe it would be if I described just about everything I love. That list, unorganised, goes a little like this: 
+            Star Wars, coding, deep and immersive worlds, music, technology in general, guitars and music theory, fashion, self-improvement, exercise and working out, people in general, animals in general, 
+            the colour red is pretty neat, teaching, learning new things, plushies, open source software, bringing down the government, people talking about the topic they love, and obviously myself.
+        </p>
+        <p class="lead">
+            So basically I'm kind of a mess. But a mess with <b>passion</b>, and a passion to want to do more and be more &#9829;.
+        </p>
+      </div>
+    </div>
 
+    <!-- Enough messing around, lets talk projects -->
+    <div class="px-4 py-5 my-5 text-center">
+    <h1 class="display-5 fw-bold">enough messing around, lets talk projects</h1>
+    <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">I know why you're here, you want to take a look at what weird and wacky things I like to involve myself in. It's no surprise, I've heard it all before, it's irrisistable. So let's talk about it then shall we?.....</p>
+    </div>
 
+    <!-- My website hero -->
+    <div class="px-4 pt-5 my-5 text-center">
+    <h1 class="display-4 fw-bold">my website</h1>
+    <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">One of the best examples of what I've accomplished is my website. It's built using the ASP.NET Core Web Application template in Visual Studio 2019, and then adapted and transformed into what it is today.</p>
+    </div>
+    <div>
+        <div class="container px-5">
+            <img src="~/images/index/GitHub Website Heroes.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+        </div>
+    </div>
+</div>
+<!-- My GitHub scripts hero -->
+<div class="px-4 pt-5 my-5 text-center">
+    <h1 class="display-4 fw-bold">custom scripts</h1>
+    <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">One of the many different projects I took up was trying to make my life easier through Automation. These scripts I wrote help complete tasks automatically and without much problem</p>
+    </div>
+    <div>
+        <div class="container px-5">
+            <img src="~/images/index/WinGet Heroes.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+        </div>
+    </div>
+</div>
+
+<!-- Looking for somewhere to go? -->
+  <div class="container px-4 py-5" id="custom-cards">
+    <h2 class="pb-2 border-bottom">looking for somewhere to go? Why not try these? Or scroll down for to learn more about me</h2>
+
+    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+        <div class="col">
+            <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg rounded" style='background-image: url("/images/temp/ProjectsWindowsTerminal.png");'>
+                <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                    <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Check out the history of this website</h2>
+                    <ul class="d-flex list-unstyled mt-auto">
+                        <li class="me-auto">
+                            <div class="InvertSvgColour">
+                                <a class="small" asp-area="" asp-page="/What'sNew">
+                                    <img src="~/images/icons/link.svg" alt="Link SVG to the page What'sNew" width="32" height="32">
+                                </a>
+                            </div>
+                        </li>
+                        <li class="d-flex align-items-center me-3">
+                            <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill" /></svg>
+                            <small>Earth</small>
+                        </li>
+                        <li class="d-flex align-items-center">
+                            <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3" /></svg>
+                            <small>3d</small>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style='background-image: url("/images/temp/GitHubProjects.png");'>
+                <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+                    <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Check out my projects!</h2>
+                    <ul class="d-flex list-unstyled mt-auto">
+                        <li class="me-auto">
+                            <div class="InvertSvgColour">
+                                <a href="https://github.com/Aluulu">
+                                <img src="~/images/icons/link.svg" alt="Link SVG to the page What'sNew" width="32" height="32">
+                                </a>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+        <div class="col">
+            <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-lg" style="background-image: url('/images/temp/unsplash-photo-3.jpg');">
+                <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+                    <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">Check out my social media page!</h2>
+                    <ul class="d-flex list-unstyled mt-auto">
+                        <li class="me-auto">
+                            <div class="InvertSvgColour">
+                                <a class="small" asp-area="" asp-page="/What'sNew">
+                                    <img src="~/images/icons/link.svg" alt="Link SVG to the page What'sNew" width="32" height="32">
+                                </a>
+                            </div>
+                        </li>
+                        <li class="d-flex align-items-center me-3">
+                            <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#geo-fill" /></svg>
+                            <small>California</small>
+                        </li>
+                        <li class="d-flex align-items-center">
+                            <svg class="bi me-2" width="1em" height="1em"><use xlink:href="#calendar3" /></svg>
+                            <small>5d</small>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Social Media links -->
 <div class="colour-gradient">
     <div class="callout-content">
         <div style="text-align:center">
