--- a/Pages/AboutMe.cshtml
+++ b/Pages/AboutMe.cshtml
@@ -28,7 +28,7 @@
         <p class="lead">
             So how would I describe myself? Well I think the best way to describe it would be if I described just about everything I love. That list, unorganised, goes a little like this: 
             Star Wars, coding, deep and immersive worlds, music, technology in general, guitars and music theory, fashion, self-improvement, exercise and working out, people in general, animals in general, 
-            the colour red is pretty neat, teaching, learning new things, plushies, open source software, bringing down the government, people talking about the topic they love, and obviously myself.
+            the colour red is pretty neat, teaching, learning new things, plushies, open source software, bringing down the government (for legal reasons this is a joke), people talking about the topic they love, and obviously myself.
         </p>
         <p class="lead">
             So basically I'm kind of a mess. But a mess with <b>passion</b>, and a passion to want to do more and be more &#9829;.
