--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -14,7 +14,7 @@
   <meta name="description" content="">
   <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
   <meta name="generator" content="Hugo 0.98.0">
-  <title>Cover Template · Bootstrap v5.2</title>
+  <title>Callum Wellard's Website</title>
 
   <link rel="stylesheet" href="~/css/site.css" />
   <link rel="canonical" href="https://getbootstrap.com/docs/5.2/examples/cover/">
@@ -119,7 +119,7 @@
               </li>
 
               <li class="nav-item">
-                <a class="nav-link text-light" asp-area="" asp-page="/TEMP">Temp</a>
+                <a class="nav-link text-light" asp-area="" asp-page="/Weather">Weather</a>
               </li>
 
               <li class="nav-item">
