--- a/Pages/Privacy.cshtml
+++ b/Pages/Privacy.cshtml
@@ -15,7 +15,7 @@
     </svg>
 <p class="lead">Oh wait, you came here expecting some whitty rebuttal or one-liner since that's what this entire webpage has been about, didn't you? Well I'm sorry to say but that's not happening.
     This website doesn't have enough pazaz to warrent a whole privacy page. I mean what the hell am I supposed to be chucking in there exactly? "Oh thank you for coming onto my page I really appreciate that, but 
-    there are a few rules you must be aware off. This is how I collect your data blah blah blah" Nahh that's not how it works, this website doesn't even use cookies..... wait does it? I don't know how to check.. 
+    there are a few rules you must be aware of. This is how I collect your data blah blah blah" Nahh that's not how it works, this website doesn't even use cookies..... wait does it? I don't know how to check.. 
     I'm writing this having a panic attack oh God how do I know?! Well either way, you've been reading me ramble on for like 2 minutes straight and you're still here, that's impressive.
     Or maybe that's concerning? Who stays on a privacy page for this long, is this what you get up to in your spare time? That's kinda weird, and I thought I was weird. I'll be honest, I've been stalling, here's the privacy statement since you need it so much:
 </p>    
