--- a/Pages/Shared/_Layout.cshtml
+++ b/Pages/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/TEMP">Temp</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Weather">Weather</a>
                         </li>
 
                         <li class="nav-item">
